# test-serverless-wsgi-asgi-locally

./: .gitignore  README.rst  package.json  pyproject.toml  requirements.txt  serverless.yml
serverless_wsgi/: __init__.py  settings.py  wsgi.py
serverless_wsgi/controllers/: github.py
serverless_wsgi/routers/: api.py  github.py
